--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Users#show</h1>
+<!-- <h1>Users#show</h1> -->
 <p><%= notice %></p>
 <p> Name: <%=@user.name %></p>
 <p> Email: <%=@user.email %></p>
@@ -8,4 +8,4 @@
 
 
 <%= link_to "Edit",  edit_user_path(@user.id) %>
-<%= link_to "link to users page", user_path %>
+<%= link_to "link to users page", users_path %>
