--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <h2>Users</h2>
   <%= link_to "New", new_user_path %>
+  <%= will_paginate @user, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -9,6 +10,8 @@
         <th>Gender</th>
         <th>Company</th>
         <th>Skills</th>
+        <th>Age</th>
+
         <th colspan="3">Actions</th>
       </tr>
     </thead>
@@ -19,13 +22,14 @@
         <td><%= user.email %></td>
         <td><%= user.gender %></td>
         <td><%= user.company %></td>
+        <td><%= user.skills %></td>
+        <td><%= user.age %></td>
 
         <td><%= link_to "Show",  user_path(user.id) %></td>
         <td><%= link_to "Edit",  edit_user_path(user.id) %></td>
         <td><%= link_to "Destroy", user, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
       </tr>
       <%end%>
-      <%= will_paginate @user%>
     </tbody>
   </table>
 </div>
